*SVN*

* PostgreSQL: don't use async_exec and async_query with postgres-pr.  #7727 [flowdelic]

* Fix has_many :through << with custom foreign keys.  #6466, #7153 [naffis, Rich Collins]

* Test DateTime native type in migrations, including an edge case with dates
during calendar reform.  #7649, #7724 [fedot, Geoff Buesing]

* SQLServer: correctly schema-dump tables with no indexes or descending indexes.  #7333, #7703 [Jakob S, Tom Ward]

* SQLServer: recognize real column type as Ruby float.  #7057 [sethladd, Tom Ward]

* Added fixtures :all as a way of loading all fixtures in the fixture directory at once #7214 [manfred]

* Added database connection as a yield parameter to ActiveRecord::Base.transaction so you can manually rollback [DHH]. Example:

    transaction do |transaction|
      david.withdrawal(100)
      mary.deposit(100)
      transaction.rollback! # rolls back the transaction that was otherwise going to be successful
    end

* Made increment_counter/decrement_counter play nicely with optimistic locking, and added a more general update_counters method [Jamis Buck]

* Reworked David's query cache to be available as Model.cache {...}. For the duration of the block no select query should be run more then once. Any inserts/deletes/executes will flush the whole cache however [Tobias Luetke]
  Task.cache { Task.find(1); Task.find(1) } #=> 1 query
  
* When dealing with SQLite3, use the table_info pragma helper, so that the bindings can do some translation for when sqlite3 breaks incompatibly between point releases. [Jamis Buck]

* Oracle: fix lob and text default handling.  #7344 [gfriedrich, Michael Schoen]

* SQLServer: don't choke on strings containing 'null'.  #7083 [Jakob S]

* MySQL: blob and text columns may not have defaults in 5.x. Update fixtures schema for strict mode.  #6695 [Dan Kubb]
